--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,8 @@
                                 <div class="box">
                                     <img src="./image.portfolio/img-(10).jpg" alt=""></img>
                                     <div class="overlay">
-                                        <p class=""><code>div.box</code></p>
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
                                     </div>
                                 </div>
                                 <div class="projects-item-title">
