--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
         <link rel="stylesheet" href="./css/style.css">
         <style>
             a{ text-decoration: none; }
-            /* a:hover {color:#2196F3;} */
-            /* a {color: #212121;} */
-            a[title] {color: #757575;}
             a[color] {color: rgba(255, 255, 255, 0.6)}
             li { list-style-type: none;}
         </style>
@@ -420,8 +417,8 @@
                         <a href="WebStudio" class="logo logo-footer"><span class="web">Web</span>Studio</a>
                         <ul class="footer-list">
                             <li class="footer-item"><address class="address">г. Киев, пр-т Леси Украинки, 26</address></li>
-                            <li class="footer-item"><a href="mailto:info@devstudio.com" color="mailto:info@devstudio.com">@devstudio.com</a></li>
-                            <li class="footer-item"><a href="tel:+380961111111" color="tel:+380961111111">+380961111111</a></li>
+                            <li class="footer-item footer-contakt"><a href="mailto:info@devstudio.com" color="mailto:info@devstudio.com">@devstudio.com</a></li>
+                            <li class="footer-item footer-contakt"><a href="tel:+380961111111" color="tel:+380961111111">+380961111111</a></li>
                         </ul>
                     </div>
                     <div class="footer-socials-container">
