--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <style>
             a{ text-decoration: none;}
-            a:hover {color:#2196F3;}
-            /* a {color: #212121;} */ 
-            a[title] {color: #757575;}
             a[color] {color: rgba(255, 255, 255, 0.6)}
             li {list-style-type: none;}
         </style>
@@ -64,7 +61,6 @@
                     <ul class="projects-list grid">
                         <li class="projects-item grid-item">
                             <a href="Веб-сайт" class="projects-tagline">
-                                
                                 <div class="box">
                                     <img src="./image.portfolio/img-(10).jpg" alt=""></img>
                                     <div class="overlay">
@@ -164,9 +160,9 @@
                             <li class="footer-item">
                                 <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
                             </li>
-                            <li class="footer-item"><a href="mailto:info@devstudio.com"
+                            <li class="footer-item footer-contakt"><a href="mailto:info@devstudio.com"
                                     color="mailto:info@devstudio.com">@devstudio.com</a></li>
-                            <li class="footer-item"><a href="tel:+380961111111" color="tel:+380961111111">+380961111111</a></li>
+                            <li class="footer-item footer-contakt"><a href="tel:+380961111111" color="tel:+380961111111">+380961111111</a></li>
                         </ul>
                     </div>
                     <div class="footer-socials-container">
