--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Дизайн" class="projects-tagline">
-                                <img src="./image.portfolio/img-(1).jpg" alt=""></img>
+                                <div class="box">
+                                    <img src="./image.portfolio/img-(1).jpg" alt=""></img>
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Постер New Orlean vs Golden Star</p>
                                     <p class="projects-title">Дизайн</p>
@@ -85,7 +91,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Приложение" class="projects-tagline">
-                                <img src="./image.portfolio/img-(2).jpg" alt=""></img>
+                                <div class="box">
+                                <img src="./image.portfolio/img-(2).jpg" alt=""></img>    
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Ресторан Seafood</p>
                                     <p>Приложение</p>
@@ -94,7 +106,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Маркетинг" class="projects-tagline">
-                                <img src="./image.portfolio/img-(3).jpg" alt=""></img>
+                                <div class="box">
+                                    <img src="./image.portfolio/img-(3).jpg" alt=""></img>
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Проект Prime</p>
                                     <p class="projects-title">Маркетинг</p>
@@ -103,7 +121,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Приложение" class="projects-tagline">
-                                <img src="./image.portfolio/img-(4).jpg" alt=""></img>
+                                <div class="box">
+                                    <img src="./image.portfolio/img-(4).jpg" alt=""></img>
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Проект Boxes</p>
                                     <p class="projects-title">Приложение</p>
@@ -112,7 +136,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Веб-сайт" class="projects-tagline">
-                                <img src="./image.portfolio/img-(5).jpg" alt=""></img>
+                                <div class="box">
+                                    <img src="./image.portfolio/img-(5).jpg" alt=""></img>
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Inspiration has no Borders</p>
                                     <p class="projects-title">Веб-сайт</p>
@@ -121,7 +151,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Дизайн" class="projects-tagline">
-                                <img src="./image.portfolio/img-(6).jpg" alt=""></img>
+                                <div class="box">
+                                    <img src="./image.portfolio/img-(6).jpg" alt=""></img>
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Издание Limited Edition</p>
                                     <p class="projects-title">Дизайн</p>
@@ -130,7 +166,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Маркетинг" class="projects-tagline">
-                                <img src="./image.portfolio/img-(7).jpg" alt=""></img>
+                                <div class="box">
+                                    <img src="./image.portfolio/img-(7).jpg" alt=""></img>
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Проект LAB</p>
                                     <p class="projects-title">Маркетинг</p>
@@ -139,7 +181,13 @@
                         </li>
                         <li class="projects-item grid-item">
                             <a href="Приложение" class="projects-tagline">
-                                <img src="./image.portfolio/img-(8).jpg" alt=""></img>
+                                <div class="box">
+                                    <img src="./image.portfolio/img-(8).jpg" alt=""></img>
+                                    <div class="overlay">
+                                        <p><code class="box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</code></p>
+                                    </div>
+                                </div>
                                 <div class="projects-item-title">
                                     <p class="projects-desc">Growing Business</p>
                                     <p>Приложение</p>
