--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <!-- Hero -->
                     <section class="hero"> 
                         <div class="hero-container container">
-                            <h1 class="hero-title">ЭФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                            <h1 class="hero-title">ЭФЕКТИВНЫЕ РЕШЕНИЯ <br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                             <button class="hero-button" data-modal-open><span class="hero-btn">Заказать услугу</span></button>
                             <div class="backdrop is-hidden" data-modal>
                                 <div class="modal">
