--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,11 @@
             <section class="portfolio-section">
                 <div class="portfolio-container container">
                     <ul class="portfolio-list">
-                        <li><button class="portfolio-item">Все</button></li>
-                        <li><button class="portfolio-item">Веб-сайты</button></li>
-                        <li><button class="portfolio-item">Приложения</button></li>
-                        <li><button class="portfolio-item">Дизайн</button></li>
-                        <li><button class="portfolio-item">Маркетинг</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn">Все</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn"">Веб-сайты</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn"">Приложения</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn"">Дизайн</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn"">Маркетинг</button></li>
                     </ul>
                     <!-- Projects -->
                     <ul class="projects-list grid">
