--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <style>
             a{ text-decoration: none;}
-            a[color] {color: rgba(255, 255, 255, 0.6)}
             li {list-style-type: none;}
         </style>
     </head>
@@ -52,10 +51,10 @@
                 <div class="portfolio-container container">
                     <ul class="portfolio-list">
                         <li class="portfolio-item"><button class="portfolio-btn">Все</button></li>
-                        <li class="portfolio-item"><button class="portfolio-btn"">Веб-сайты</button></li>
-                        <li class="portfolio-item"><button class="portfolio-btn"">Приложения</button></li>
-                        <li class="portfolio-item"><button class="portfolio-btn"">Дизайн</button></li>
-                        <li class="portfolio-item"><button class="portfolio-btn"">Маркетинг</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn">Веб-сайты</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn">Приложения</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn">Дизайн</button></li>
+                        <li class="portfolio-item"><button class="portfolio-btn">Маркетинг</button></li>
                     </ul>
                     <!-- Projects -->
                     <ul class="projects-list grid">
