--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-                <!--Нормализация стилей-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.min.css@8.0.1/normalize.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
                 <!-- Основные шрифты -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-                <!-- Кастомные стили-->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" />
+        <!-- Normalize -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.css"
+        integrity="sha256-tNxXsOT6dx9hXElc6ZSLWyMEp94gnMIxPGrJqzCZ1Ww=" crossorigin="anonymous" />
+        <!-- Кастомные стили-->
         <link rel="stylesheet" href="./css/style.css">
         <style>
             a{ text-decoration: none; }
@@ -109,7 +107,7 @@
                                             <label class="label confirm">
                                                 <input class="checkbox" type="checkbox" name="checkbox" />
                                                 <svg class="custom-checkbox" width="15" height="15">
-                                                    <use href="./images/sprite.svg#icon-check"></use>
+                                                    <use href="./image/sprite.svg#checkmark     "></use>
                                                 </svg>
                                                 <span class="label-text">
                                                     Соглашаюсь с рассылкой и принимаю
