--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
-        <link rel="stylesheet" href="./css/style.css" />
+        
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.min.css@8.0.1/normalize.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <!-- fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" />
+        <!-- Кастомные стили-->
+        <link rel="stylesheet" href="./css/style.css">
         <style>
             a{ text-decoration: none;}
             li {list-style-type: none;}
@@ -207,17 +209,18 @@
                             <li class="footer-item">
                                 <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
                             </li>
-                            <li class="footer-item footer-contakt"><a href="mailto:info@devstudio.com"
-                                    color="mailto:info@devstudio.com">@devstudio.com</a></li>
-                            <li class="footer-item footer-contakt"><a href="tel:+380961111111" color="tel:+380961111111">+380961111111</a></li>
+                            <li class="footer-item "><a href="mailto:info@devstudio.com" color="mailto:info@devstudio.com"
+                                    class="footer-contakt">@devstudio.com</a></li>
+                            <li class="footer-item ">
+                                <a href="tel:+380961111111" color="tel:+380961111111" class="footer-contakt">+380961111111</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="footer-socials-container">
                         <p class="socials-title">присоединяйтесь</p>
                         <ul class="socials list">
                             <li class="socials-item">
-                                <a class="socials-link link" 
-                                href="" target="_blank" rel="noopener noreferrer" fill="currentcolor"
+                                <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer"
                                     aria-label="иконка Instagram">
                                     <svg class="socials-icon-footer" width="20" height="20">
                                         <use href="./image/sprite.svg#instagram"></use>
@@ -225,25 +228,21 @@
                                 </a>
                             </li>
                             <li class="socials-item">
-                                <a class="socials-link link" 
-                                href="" target="_blank" rel="noopener noreferrer" fill="currentcolor" 
-                                aria-label="иконка Twitter">
-                                    <svg class="socials-icon-footer" width="20" height="20">
+                                <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                                    aria-label="иконка Twitter">
+                                    <svg class="socials-icon-footer" width="20" height="20" fill=currentColor>
                                         <use href="./image/sprite.svg#twitter"></use>
                                     </svg></a>
                             </li>
                             <li class="socials-item">
-                                <a class="socials-link link" 
-                                href="" target="_blank" rel="noopener noreferrer" fill="currentcolor" 
-                                aria-label="иконка Facebook">
+                                <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                                    aria-label="иконка Facebook">
                                     <svg class="socials-icon-footer" width="20" height="20">
                                         <use href="./image/sprite.svg#facebook"></use>
                                     </svg></a>
                             </li>
                             <li class="socials-item">
-                                <a class="socials-link link" 
-                                href="" rel="noopener noreferrer" fill="currentcolor" 
-                                aria-label="иконка Linkedin">
+                                <a class="socials-link link" href="" rel="noopener noreferrer" aria-label="иконка Linkedin">
                                     <svg class="socials-icon-footer" width="20" height="20">
                                         <use href="./image/sprite.svg#linkedin"></use>
                                     </svg>
